更新: 注册 web api 的账户