@@ -44,6 +44,7 @@ RUN $JAVA_HOME/bin/jlink \
          --add-modules java.sql \
          --add-modules java.transaction.xa \
          --add-modules java.xml \
+         --add-modules jdk.crypto.ec \
          --add-modules jdk.unsupported \
          --strip-debug \
          --no-man-pages \
